# Document-Automation

./: .cursorrules  .dockerignore  .gitignore  2  CLOUD_RUN_README.md  COMPREHENSIVE_DOCUMENTATION.md  DEPLOYMENT.md  Dockerfile  LICENSE  MCP_TOOLS_GUIDE.md  README.md  README_WRANGLER_DEPLOYMENT.md  claude_desktop_config_example.json  claude_desktop_config_windows.json  cloudbuild.yaml  cloudflare-implementation-readme.md  cursor_config_example.json  cursor_mcp_config_fixed.json  debug_basemodel.py  debug_imports.py  debug_imports_v2.py  debug_output.txt  diagnose_mcp.py  diagnose_simple.py  docker-compose.yml  example_DOCUMENTATION.md  mcp_request.json  package.json  pyproject.toml  request.json  requirements.txt  run_server.bat  run_server.py  start_mcp_server.bat  start_server.sh  tsconfig.json  wrangler.toml
docs/: test_analysis_123_interactive.html  test_analysis_123_professional_documentation.md
src/: __init__.py  index.ts  main.py  schemas.py  server.py  server_fastmcp.py  server_minimal.py  server_windows_fix.py  servertest.py  simple_server.py  types.py
src/analyzers/: __init__.py  base_analyzer.py  codebase_analyzer.py  database_analyzer.py  enhanced_analyzer.py  framework_detector.py  project_classifier.py
src/diagrams/: __init__.py  architecture_diagrams.py  database_diagrams.py  mermaid_generator.py
src/export/: format_exporter.py
src/generators/: __init__.py  documentation_generator.py  interactive_doc_generator.py  mcp_doc_generator.py  professional_doc_generator.py  readme_template.py
src/pagination/: __init__.py  chunker.py  context.py  (+2 more)
(+17 files in other folders)
