[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-automation-mcp"
version = "1.0.0"
description = "MCP server for automated documentation generation and codebase analysis"
authors = [
    {name = "Vedant Parmar", email = "vedantparmar12@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "PyGithub>=1.58.0",
    "GitPython>=3.1.0",
    "markdown>=3.4.0",
    "jinja2>=3.1.0",
    "beautifulsoup4>=4.11.0",
    "requests>=2.28.0",
    "pathspec>=0.10.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vedantparmar12/Document-Automation"
Repository = "https://github.com/vedantparmar12/Document-Automation"
Issues = "https://github.com/vedantparmar12/Document-Automation/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true